kubernetes/applications/kube-state-metrics/kube-state-metrics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
spec:
  selector:
    app: kube-state-metrics
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
